--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,15 @@
             </intent-filter>
         </activity>
         
-        
+        <activity
+            android:name="com.example.baumarkt.Search"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.example.test.SEARCH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         
         </application>
 
