Finale Anpassungen und Kommentare

--- a/assets/coords.properties
+++ b/assets/coords.properties
@@ -1,4 +1,4 @@
-# Coordinaten der versiedenen Regale auf dem Display
+# Koordinaten der verschiedenen Regale auf dem Display
 1A=100,100
 1B=250,100
 1C=500,100
